2013-10-23 Igor Živković <contact@igor-zivkovic.from.hr>
   * Add dovecot init script

2013-09-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Update location of autostart in autofs script

2013-07-25 Igor Živković <contact@igor-zivkovic.from.hr>
   * Added restore state to alsa bootscript

2013-07-21 Igor Živković <contact@igor-zivkovic.from.hr>
   * Added unbound bootscript

2013-07-10 Igor Živković <contact@igor-zivkovic.from.hr>
   * Added acpid bootscript

2013-02-04 Armin K. <krejzi@email.com>
   * Added network service for wpa_supplicant
   * Minor modifications to dhclient network service

2012-08-26 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Restore winbindd script

2012-08-25 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Restore xinetd script

2012-08-14 Armin K. <krejzi@email.com>
   * Renamed cyrus-sasl bootscript to saslauthd
   * Renamed openldap bootscript to slapd
   * Renamed kerberos bootscript to krb5
   * Renamed dhcp bootscript to dhcpd and made it configurable
     through /etc/sysconfig/dhcpd
   * Updated dhclient network service to be compatible with latest
     instructions for ISC DHCP.

2012-06-02 Armin K. <krejzi@email.com>
   * Added BlueZ bootscript

2012-06-17 DJ Lucas <dj@linuxfromscratch.org>
   * Fix sshd return value when stopping without running.

2012-05-09 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add atd script.
   * Make service scripts compatible with older versions of 
     init-functions.

2012-05-06 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Update exim script to be compatible with LFS 7.0+.

2012-05-02 Ken Moffat <ken@linuxfromscratch.org>
   * Use /usr/libexec in postfix script to match the book.

2012-05-01 Armin K. <krejzi@email.com>
   * Rewrote gdm script to be compatible with LFS 7.0+.

2012-04-27 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Update autofs script to be compatible with LFS

2012-04-20 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Correct start path in swat