@@ -71,7 +71,7 @@
 <!ENTITY lfs-vim-version              "7.4">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20140301">
+<!ENTITY blfs-bootscripts-version     "20140316">
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
 
 <!ENTITY blfs-wiki                    "http://wiki.&lfs-domainname;/blfs/wiki">
@@ -150,6 +150,7 @@ export -f as_root</userinput></screen>
 <!ENTITY gnupg2-version               "2.0.22">
 <!ENTITY gnutls-version               "3.2.12.1">
 <!ENTITY gpgme-version                "1.4.3">
+<!ENTITY haveged-version              "1.9.1">
 <!ENTITY iptables-version             "1.4.21">
 <!ENTITY libcap-version               "2.24">
 <!ENTITY linux-pam-version            "1.1.8">
