@@ -48,6 +48,10 @@
       <para>March 16th, 2014</para>
       <itemizedlist>
         <listitem>
+          <para>[pierre] - Add haveged. Fixes
+          <ulink url="&blfs-ticket-root;4682">#4682</ulink>.</para>
+        </listitem>
+        <listitem>
           <para>[pierre] - Add Pax-070715. Fixes
           <ulink url="&blfs-ticket-root;4736">#4736</ulink>.</para>
         </listitem>
