@@ -1,0 +1,165 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!DOCTYPE sect1 PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN"
+   "http://www.oasis-open.org/docbook/xml/4.5/docbookx.dtd" [
+  <!ENTITY % general-entities SYSTEM "../../general.ent">
+  %general-entities;
+
+  <!ENTITY haveged-download-http "http://www.issihosts.com/haveged/haveged-&haveged-version;.tar.gz">
+  <!ENTITY haveged-download-ftp  " ">
+  <!ENTITY haveged-md5sum        "015ff58cd10607db0e0de60aeca2f5f8">
+  <!ENTITY haveged-size          "468 KB">
+  <!ENTITY haveged-buildsize     "4.8 MB">
+  <!ENTITY haveged-time          "0.2 SBU">
+]>
+
+<sect1 id="haveged" xreflabel="Haveged-&haveged-version;">
+  <?dbhtml filename="haveged.html"?>
+
+  <sect1info>
+    <othername>$LastChangedBy$</othername>
+    <date>$Date$</date>
+  </sect1info>
+
+  <title>Haveged-&haveged-version;</title>
+
+  <indexterm zone="haveged">
+    <primary sortas="a-Haveged">Haveged</primary>
+  </indexterm>
+
+  <sect2 role="package">
+    <title>Introduction to Haveged</title>
+
+    <para>
+      The <application>Haveged</application> package contains a daemon
+      that generates an unpredictable stream of random numbers
+      and feeds the /dev/random device.
+    </para>
+
+    &lfs75_checked;
+
+    <bridgehead renderas="sect3">Package Information</bridgehead>
+    <itemizedlist spacing="compact">
+      <listitem>
+        <para>
+          Download (HTTP): <ulink url="&haveged-download-http;"/>
+        </para>
+      </listitem>
+      <listitem>
+        <para>
+          Download (FTP): <ulink url="&haveged-download-ftp;"/>
+        </para>
+      </listitem>
+      <listitem>
+        <para>
+          Download MD5 sum: &haveged-md5sum;
+        </para>
+      </listitem>
+      <listitem>
+        <para>
+          Download size: &haveged-size;
+        </para>
+      </listitem>
+      <listitem>
+        <para>
+          Estimated disk space required: &haveged-buildsize;
+        </para>
+      </listitem>
+      <listitem>
+        <para>
+          Estimated build time: &haveged-time;
+        </para>
+      </listitem>
+    </itemizedlist>
+
+    <para condition="html" role="usernotes">User Notes:
+      <ulink url="&blfs-wiki;/haveged"/>
+    </para>
+  </sect2>
+
+  <sect2 role="installation">
+    <title>Installation of Haveged</title>
+
+    <para>Install <application>Haveged</application> by running the following
+    commands:</para>
+
+<screen><userinput>./configure --prefix=/usr &amp;&amp;
+make</userinput></screen>
+
+    <para>
+      To test the results, issue: <command>make check</command>.
+    </para>
+
+    <para>
+      Now, as the <systemitem class="username">root</systemitem> user:
+    </para>
+
+<screen role="root"><userinput>make install &amp;&amp;
+mkdir -pv    /usr/share/doc/haveged-&haveged-version; &amp;&amp;
+cp -v README /usr/share/doc/haveged-&haveged-version;</userinput></screen>
+
+    <sect3  id="haveged-init">
+      <title>Boot Script</title>
+
+      <para>
+        If you want the <application>Haveged</application> daemon to
+        start automatically when the system is booted, install the
+        <filename>/etc/rc.d/init.d/haveged</filename> init script included
+        in the <xref linkend="bootscripts"/> package.
+      </para>
+
+      <indexterm zone="haveged haveged-init">
+        <primary sortas="f-haveged">haveged</primary>
+      </indexterm>
+
+<screen role="root"><userinput>make install-haveged</userinput></screen>
+
+    </sect3>
+
+  </sect2>
+
+  <sect2 role="content">
+    <title>Contents</title>
+
+    <segmentedlist>
+      <segtitle>Installed Programs</segtitle>
+      <segtitle>Installed Libraries</segtitle>
+      <segtitle>Installed Directory</segtitle>
+
+      <seglistitem>
+        <seg>
+          haveged
+        </seg>
+        <seg>
+          libhavege.so
+        </seg>
+        <seg>
+          /usr/include/haveged
+        </seg>
+      </seglistitem>
+    </segmentedlist>
+
+    <variablelist>
+      <bridgehead renderas="sect3">Short Descriptions</bridgehead>
+      <?dbfo list-presentation="list"?>
+      <?dbhtml list-presentation="table"?>
+
+      <varlistentry id="haveged-prog">
+        <term><command>haveged</command></term>
+        <listitem>
+          <para>
+            is a daemon that generates an unpredictable stream of random 
+            numbers harvested from the indirect effects of hardware events 
+            based on hidden processor states (caches, branch  predictors, memory
+            translation tables, etc).
+          </para>
+          <indexterm zone="haveged haveged-prog">
+            <primary sortas="b-haveged-prog">haveged</primary>
+          </indexterm>
+        </listitem>
+      </varlistentry>
+
+    </variablelist>
+
+  </sect2>
+
+</sect1>
