@@ -50,6 +50,7 @@ $Date$
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="gnupg2.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="gnutls.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="gpgme.xml"/>
+  <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="haveged.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="iptables.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="firewalling.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="libcap.xml"/>
