@@ -79,7 +79,7 @@
       <listitem>
         <para>
           Required patch:
-          <ulink url="&patch-root;/MesaLib-&mesalib-version;-svga_texture-1.patch"/>.
+          <ulink url="&patch-root;/MesaLib-&mesalib-version;-svga_texture-1.patch"/>
         </para>
       </listitem>
       <listitem>
